# network-king

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: build-push-dockerhub.yml
app/: __init__.py  auth.py  badges.py  database.py  gameplay.py  main.py  models.py  seed_admin.py  settings.py  storage.py  utils.py  web.py
app/routes/: __init__.py  admin.py  auth.py  public.py
app/static/: scanner.js  site.webmanifest  styles.css
app/templates/: admin_characters.html  admin_events.html  admin_networkers.html  base.html  character_detail.html  event_detail.html  landing.html  login.html  scan.html
tests/: conftest.py  test_admin.py  test_gameplay.py
